--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Muhammad Shaheer Waris</span></p>
                       <p><span class="title-s">Profile: </span> <span>Frontend developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>mwabbasi123@gmail.com</span></p>
+                      <p><span class="title-s">Email: </span> <span>muhammadshaheerwaris@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+92) 317-2266009</span></p>
                     </div>
                   </div>
@@ -774,7 +774,7 @@
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> GOJRA, TOBA TEK SINGH</li>
                       <li><span class="ion-ios-telephone"></span> (+92) 317-2266009</li>
-                      <li><span class="ion-email"></span> mwabbasi123@gmail.com</li>
+                      <li><span class="ion-email"></span> muhammadshaheerwaris@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
